--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include head.html %}
-  <body>
-    {{ content }}
-    {% include footer.html %}
-  </body>
+ {% include head.html %}
+ <body>
+  {% include header.html %}
+  <div class="container-fluid">
+   <div class="row">
+    <div class="col">
+     {{ content }}
+    </div>
+   </div>
+  </div>
+  {% include footer.html %}
+ </body>
 </html>
