Fixing tashkil mistake

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -23,14 +23,14 @@
     <div class="carousel-item">
       <img class="d-block w-100" src="/assets/carousel-4.jpg" alt="Third slide">
       <div class="carousel-caption-left d-none d-md-block">
-        <h3>ألكتاب ألشريف</h3>
+        <h3>الكتاب الشريف</h3>
         <p>"The Sharif presents to people new life in Christ in a language that is dynamic, clear and simple.” (Dr. Richard Brown, Translation Consultant, USA)</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="/assets/carousel-5.jpg" alt="Third slide">
       <div class="carousel-caption-left d-none d-md-block">
-        <h3>ألكتاب ألشريف</h3>
+        <h3>الكتاب الشريف</h3>
         <p>وَقَالَ لَهُمْ: "اِذْهَبُوا إِلَى كُلِّ الْعَالَمِ، وَانْشُرُوا الْبُشْرَى لِكُلِّ النَّاسِ." ‮‮مرقس‬ ‭16:15‬ ‭SAB‬‬</p>
       </div>
     </div>
