--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -9,14 +9,14 @@
     <div class="carousel-item active">
       <img class="d-block w-100" src="/assets/carousel-2.jpg" alt="First slide">
       <div class="carousel-caption-left d-none d-md-block">
-        <h3>ألكتاب ألشريف</h3>
+        <h3>الكتاب ألشريف</h3>
         <p>"When you read the Sharif Bible, the language flows easily, you enjoy what you read, and you feel as if it really is addressed to you personally from a Heavenly Father, and you’re also able to easily share it with others.” (Um Ghattas, Jordan)</p>
       </div>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="/assets/carousel-3.jpg" alt="Second slide">
       <div class="carousel-caption-right d-none d-md-block">
-        <h3>ألكتاب ألشريف</h3>
+        <h3>الكتاب ألشريف</h3>
         <p>"He said to them, 'Go into all the world and preach the gospel to all creation.'" Mark 16:15 NIV</p>
       </div>
     </div>
