--- a/css/material-design.scss
+++ b/css/material-design.scss
@@ -1,4 +1,4 @@
 ---
 ---
 
-@import "material-components-web/material-components-web";
+@import "../node_modules/material-components-web/material-components-web";
