--- a/_layouts/home-md.html
+++ b/_layouts/home-md.html
@@ -1,34 +1,27 @@
 <!doctype html>
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}">
  <head>
-   <meta charset="utf-8">
-   <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
-   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> 
-   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  </head>   
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="/css/app.css" rel="stylesheet">
  </head>
  <body>
-   <header class="mdc-top-app-bar mdc-top-app-bar--fixed">
-     <div class="mdc-top-app-bar__row">
-       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-         <a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
-         <span class="mdc-top-app-bar__title">Title</span>
-       </section>
-       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-         <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Download" alt="Download">file_download</a>
-         <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Print this page" alt="Print this page">print</a>
-         <a href="#" class="material-icons mdc-top-app-bar__action-item" aria-label="Bookmark this page" alt="Bookmark this page">bookmark</a>
-       </section>
-     </div>
-   </header>
-  <div class="page__content">
-   <div class="row">
-    <div class="col">
-{{ content }}
+  <header class="mdc-top-app-bar">
+    <div class="mdc-top-app-bar__row">
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
+        <button class="mdc-icon-button material-icons mdc-top-app-bar__navigation-icon" onclick="">menu</button>
+        <span class="mdc-top-app-bar__title">San Francisco, CA</span> 
+      </section>
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Download">file_download</button>
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Print this page">print</button>
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button" aria-label="Bookmark this page">bookmark</button>
+      </section>      
     </div>
-   </div>
-  </div>
+  </header>  
+  <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>  
  </body>
 </html>
