Changing 'read' to 'watch' in menu

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -11,7 +11,7 @@
        <a class="nav-link" href="/{{page.lang}}/why-the-sharif">Why the Sharif?</a>
      </li>
      <li class="nav-item">
-       <a class="nav-link" href="/{{page.lang}}/read-listen">Read & Listen</a>
+       <a class="nav-link" href="/{{page.lang}}/read-listen">Watch & Listen</a>
      </li>
      <li class="nav-item">
        <a class="nav-link" href="/{{page.lang}}/bibles-books">Bibles & Books</a>
