--- a/_layouts/home-ar.html
+++ b/_layouts/home-ar.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
  {% include head.html %}
  <body>
-  {% include navigation.html %}
+  {% include navigation-ar.html %}
   {% include carousel.html %}
   <div class="container-fluid">
    <div class="row">
