--- a/_layouts/home-ar.html
+++ b/_layouts/home-ar.html
@@ -3,7 +3,7 @@
  {% include head.html %}
  <body>
   {% include navigation-ar.html %}
-  {% include carousel.html %}
+  {% include carousel-ar.html %}
   <div class="container-fluid">
    <div class="row">
     <div class="col">
