Cleaning up layouts, unifying approach

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}" dir="{{ site.data.locales[page.lang].langdir | default: site.data.locales[page.lang].langdir }}">
  {% include head.html %}
  <body>
-  {% include navigation.html %}
+  {% include navigation-{{page.lang}}.html %}
   <div class="container-fluid">
    <div class="row">
     <div class="col">
