--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}" dir="{{ site.data.locales[page.lang].langdir | default: site.data.locales[page.lang].langdir }}">
  {% include head.html %}
  <body>
-  {% include navigation.html %}
-  {% include carousel.html %}
+  {% include navigation-{{ page.lang }}.html %}
+  {% include carousel-{{ page.lang }}.html %}
   <div class="container-fluid">
    <div class="row">
     <div class="col">
