--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="{{ page.lang | default: site.lang | default: 'en' }}" dir="{{ site.data.locales[page.lang].langdir | default: site.data.locales[page.lang].langdir }}">
  {% include head.html %}
  <body>
-  {% include navigation-{{page.lang}}.html %}
+  {% include navigation.html %}
   <div class="container-fluid">
    <div class="row">
     <div class="col">
