--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
  {% include head.html %}
  <body>
   {% include navigation.html %}
-  {% include carousel-{{ page.lang }}.html %}
+  {% include carousel.html %}
   <div class="container-fluid">
    <div class="row">
     <div class="col">
