Adding SEO plugin

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,4 +4,5 @@
   <title>{{ site.title }} : {{ page.title }}</title>
   <link rel="stylesheet" href="/css/main-{{ page.lang }}.css">
   {% include alternate-links.html %}
+  {% seo %}
 </head>
