Removing quotes when there is no reference

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -18,7 +18,11 @@
       <img class="d-block w-100" src="{{ image.path }}" alt="{{ image.alt }}">
       <div class="carousel-caption-{{ image.quoteposition }} d-none d-md-block">
         <h3>{{ image.[page.lang].title }}</h3>
+        {% if image.[page.lang].ref %}
         <p>&ldquo;{{ image.[page.lang].quote }}&rdquo; ({{ image.[page.lang].ref }})</p>
+        {% else %}
+        <p>{{ image.[page.lang].quote }}</p>        
+        {% endif %}
       </div>
     </div>
     {% endfor %}
