--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,6 +6,7 @@
   <div class="container-fluid">
    <div class="row">
     <div class="col">
+        <h1>{{ page.title }}</h1>
      {{ content }}
     </div>
    </div>
